# bazel8-python3_13-starter

./: BUILD  MODULE.bazel  README.md  WORKSPACE  calculator.py  calculator_test.py  cli.py  hello.py  requirements.txt  requirements_lock.txt
